--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,56 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-23 17:41:31 -0700 
+%% Created for Pete Su at 2025-06-29 07:18:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Derdzinski1992,
+	author = {Derdzinski, Andrzej},
+	date-added = {2025-06-29 07:18:52 -0400},
+	date-modified = {2025-06-29 07:18:52 -0400},
+	doi = {10.1007/978-3-642-50310-8},
+	isbn = {9783642503108},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Geometry of the Standard Model of Elementary Particles},
+	url = {http://dx.doi.org/10.1007/978-3-642-50310-8},
+	year = {1992},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-642-50310-8}}
+
+@article{Gross2023,
+	author = {Gross, Franz and Klempt, Eberhard and Brodsky, Stanley J. and Buras, Andrzej J. and Burkert, Volker D. and Heinrich, Gudrun and Jakobs, Karl and Meyer, Curtis A. and Orginos, Kostas and Strickland, Michael and Stachel, Johanna and Zanderighi, Giulia and Brambilla, Nora and Braun-Munzinger, Peter and Britzger, Daniel and Capstick, Simon and Cohen, Tom and Crede, Volker and Constantinou, Martha and Davies, Christine and Del Debbio, Luigi and Denig, Achim and DeTar, Carleton and Deur, Alexandre and Dokshitzer, Yuri and Dosch, Hans G{\"u}nter and Dudek, Jozef and Dunford, Monica and Epelbaum, Evgeny and Escobedo, Miguel A. and Fritzsch, Harald and Fukushima, Kenji and Gambino, Paolo and Gillberg, Dag and Gottlieb, Steven and Grafstrom, Per and Grazzini, Massimiliano and Grube, Boris and Guskov, Alexey and Iijima, Toru and Ji, Xiangdong and Karsch, Frithjof and Kluth, Stefan and Kogut, John B. and Krauss, Frank and Kumano, Shunzo and Leinweber, Derek and Leutwyler, Heinrich and Li, Hai-Bo and Li, Yang and Malaescu, Bogdan and Mariotti, Chiara and Maris, Pieter and Marzani, Simone and Melnitchouk, Wally and Messchendorp, Johan and Meyer, Harvey and Mitchell, Ryan Edward and Mondal, Chandan and Nerling, Frank and Neubert, Sebastian and Pappagallo, Marco and Pastore, Saori and Pel{\'a}ez, Jos{\'e} R. and Puckett, Andrew and Qiu, Jianwei and Rabbertz, Klaus and Ramos, Alberto and Rossi, Patrizia and Rustamov, Anar and Sch{\"a}fer, Andreas and Scherer, Stefan and Schindler, Matthias and Schramm, Steven and Shifman, Mikhail and Shuryak, Edward and Sj{\"o}strand, Torbj{\"o}rn and Sterman, George and Stewart, Iain W. and Stroth, Joachim and Swanson, Eric and de T{\'e}ramond, Guy F. and Thoma, Ulrike and Vairo, Antonio and van Dyk, Danny and Vary, James and Virto, Javier and Vos, Marcel and Weiss, Christian and Wobisch, Markus and Wu, Sau Lan and Young, Christopher and Yuan, Feng and Zhao, Xingbo and Zhou, Xiaorong},
+	date-added = {2025-06-29 07:17:55 -0400},
+	date-modified = {2025-06-29 07:17:55 -0400},
+	doi = {10.1140/epjc/s10052-023-11949-2},
+	issn = {1434-6052},
+	journal = {The European Physical Journal C},
+	note = {\href{http://arxiv.org/abs/2212.11107v2}{arxiv:2212.11107v2}},
+	number = {12},
+	publisher = {Springer Science and Business Media LLC},
+	title = {50 Years of quantum chromodynamics: Introduction and Review},
+	url = {http://dx.doi.org/10.1140/epjc/s10052-023-11949-2},
+	volume = {83},
+	year = {2023},
+	bdsk-url-1 = {http://dx.doi.org/10.1140/epjc/s10052-023-11949-2}}
+
+@article{Harlander1999,
+	author = {Harlander, R. and Steinhauser, M.},
+	date-added = {2025-06-29 07:17:25 -0400},
+	date-modified = {2025-06-29 07:17:25 -0400},
+	doi = {10.1016/s0146-6410(99)00095-2},
+	issn = {0146-6410},
+	journal = {Prog. Part. Nucl. Phys.},
+	note = {\href{http://arxiv.org/abs/hep-ph/9812357v2}{arxiv:hep-ph/9812357v2}},
+	pages = {167--228},
+	publisher = {Elsevier BV},
+	title = {Automatic computation of Feynman diagrams},
+	url = {http://dx.doi.org/10.1016/s0146-6410(99)00095-2},
+	volume = {43},
+	year = {1999},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/s0146-6410(99)00095-2}}
 
 @article{Pais1952,
 	author = {Pais, A.},
