--- a/0909.4541/HiggsLectures1.tex
+++ b/0909.4541/HiggsLectures1.tex
@@ -223,7 +223,7 @@ where
 \beq
 D_\mu=\partial_\mu +ieA_\mu
 \eeq
-and $e=-1$ is the charge of the electron.
+and $e$ is the charge of the electron.
 This lagrangian respects the $U(1)$ gauge symmetry
 \bea
 \psi & \to & e^{-i\alpha(x)}\psi \\
