--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -48,10 +48,6 @@
 
 \theoremstyle{definition}
 
-\newtheorem{theorem}{Theorem}[]
-\newtheorem{prop}{Proposition}
-\newtheorem*{corollary}{Corollary}
-\newtheorem{remark}{Remark}
 
 \usepackage[colorlinks=true
 ,breaklinks=true
@@ -142,7 +138,30 @@ bookmarksopenlevel=10,
 \newcommand{\bes}{\begin{equation*}}
 \newcommand{\ees}{\end{equation*}}
 
+\newcommand{\fcat}[1]{{\mathbf {#1}}} 
+\newcommand{\Set}{\fcat{Sets}}
+
 \DeclareMathOperator{\Hom}{{Hom}}
+
+\newcommand{\iso}{\cong}                % Isomorphism
+\newcommand{\eqv}{\simeq}               % Equivalence
+\newcommand{\sub}{\subseteq}            % Subset (possibly not proper)
+
+\usepackage{amsmath,amsthm}
+
+\theoremstyle{definition}
+
+\newtheorem{thm}{Theorem}[section]
+\newtheorem{lemma}[thm]{Lemma}
+\newtheorem{cor}[thm]{Corollary}
+
+\theoremstyle{definition}
+\newtheorem{defn}{Definition}[section]
+\newtheorem{example}{Example}[section]
+
+\theoremstyle{definition}
+\newtheorem{remark}{Remark}[section]
+\newtheorem{note}{Note}[section]
 
 % makes "=" with "x" under it
 \makeatletter
@@ -295,6 +314,28 @@ objects $A \times B$ and $\fexp{B}{A}$, for all $A,B$ in $\C$, together
 with natural isomorphisms:
 
 \bes
-\Hom(C ,A) \times \Hom(C ,B)  \Hom(C ,A \times B) ,
+\Hom(C ,A) \times \Hom(C ,B)  \iso \Hom(C ,A \times B) ,
 \tag{a}
 \ees
+\bes
+\Hom(C \times A,B) \iso \Hom(C,\fexp{B}{A}).
+\tag{b}
+\ees
+
+Cartesian closed categories abound in mathematics. For example, all
+functor categories $\Set^{\C}$ ($\C$ small) and all toposes (see below) are cartesian
+closed. So are the categories of Kelley spaces and Kuratowski limit spaces
+(see MacLane, 1971).
+
+A useful alternative presentation considers both products and exponentials
+as adjoint functors, hence equationally definable (e.g., see MacLane, 1971).
+
+\def\deq{\mathop{\cdot\mkern-5mu=\mkern-5mu\cdot}}
+
+\begin{defn}
+foo
+\end{defn}
+\be
+(hg)f = h(gf), f1_A \deq f, 1_B f \deq f, \hbox{\rm for all} f: A \to B
+\ee
+
