--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -634,7 +634,7 @@ assumed that $f$ and $g$ have the same source and target.
 $\la\prAB h, \prpAB h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
 \item[(4\mprime)] $\ev_{A,B}\bracket{h^*\pr{C,B}, \prp{C,B}} = h$, and
 $(\ev_{A,B}\bracket{k\,\pr{C,B}, \prp{C,B}})^* = k$,
-for all $h: C\sland A \to A$, and $k: C \to A \from B$.
+for all $h: C\sland B \to A$, and $k: C \to A \from B$.
 \end{enumerate}
 \pdfbookmark{Cartesian closed categories}{ccc}
 The reader will recognize that (1) and (1\mprime) define a category.
