--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -372,7 +372,9 @@ for all $f: C\times A \to B$, and $g: C \to \fexpBA$.
 
 \end{defn}
 \noindent
-It is understood that $\doteq$ is a congruence relation on $\Hom$-sets satisfying the
+It is understood that $\doteq$ is a congruence relation%
+\footnote{Editor's note: the original paper used a symbol more like $\deq$ for this equivalence relation. I changed it to $\doteq$ because to really do it right I'd need to make a new glyph in some font somewhere and I don't want to do that.}
+on $\Hom$-sets satisfying the
 above. There may be other objects, arrows and equations than follow from the
 above.
 
