--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -77,7 +77,7 @@ bookmarksopenlevel=10,
 \def\imp{\shortrightarrow}
 \def\iff{\leftrightarrow}
 \def\from{\Leftarrow}
-\def\implies{\Rightarrow}
+\def\impl{\Rightarrow}
 \def\union{\cup}
 \def\fexp#1#2{#1^{#2}}
 \def\fexpBA{\fexp{B}{A}}
@@ -351,21 +351,22 @@ arrows and equations:
 
 \item[(ii)] The following rules generate new arrows from old:
 
-$$
+\[
 \inferrule {f: A \to B \quad g: B \to C}{gf: A \to C},\quad
-\inferrule {f: C \to A \quad g: C \to B}{\la f, g \ra: C \to A \times B}, \quad
+\inferrule {f: C \to A \quad\! g: C \to B}{\la f, g \ra: C \to A \times B}, \quad
 \inferrule {f: C \times A \to B}{f^*: C \to \fexpBA}
-$$
+\]
 
 \end{enumerate}
 
 \paragraph{Equations:}
 \begin{enumerate}
 \item[(1)] $f1_A \doteq f$, $1_Bf \doteq f$, and $(hg)f \doteq g(hf)$,
- for all $f:A \to B$, $g:B \to C$, $h: C\to D$;
-\item[(2)] $f \doteq 0_A$, for all $f: A \to 1$;\\
+for all $f:A \to B$, $g:B \to C$, $h: C\to D$;
+\item[(2)] $f \doteq 0_A$, for all $f: A \to 1$;
 $\prAB\bracket{f,g} \doteq f$, $\prpAB\bracket{f,g} \doteq g$, and
-$\la\prAB h, \prpAB h\ra \doteq h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
+$\la\prAB h, \prpAB h\ra \doteq h$,
+for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
 \item[(3)] $\evBA\bracket{f^*\pr{C,A}, \prp{C,A}} \doteq f$, and
 $(\evBA\bracket{g\,\pr{C,A}, \prp{C,A}})^* \doteq g$,
 for all $f: C\times A \to B$, and $g: C \to \fexpBA$.
@@ -391,8 +392,36 @@ $\eta_{C,A}: C \to \fexp{(C \times A)}{A}$.
 
 Another view of cartesian closed categories is to consider them as
 {\em deductive systems} [Ll]. Write the objects $\one$, $A \times B$, and $\fexpBA$
-as $\top$, $A \sland B$, and $A \implies B$ respectively. One may then think of an arrow
+as $\top$, $A \sland B$, and $A \impl B$ respectively. One may then think of an arrow
 $f: A \to B$ as a {\em deduction} of $B$ from $A$ or as a {\em proof}
 of the {\em entailment} $A \ent B$. Proofs may
 be writ ten in ``tree form''. For example:
 
+\[
+\inferrule {A \sland B \xto{\pi'} B \quad A \sland B \xto{\pi} A}{A \sland B \xto{\la \pi', \pi \ra}  B \sland A}
+\]
+proves the commutative law for conjunction, while
+\[
+\inferrule{ }{(A \impl B) \sland A \xto{\evBA} B}
+\]
+may be regarded as an "axiom" (at least in a freely generated deductive system).
+
+Logicians might say that we have presented a system of natural deduction
+for the positive intuitionistic propositional calculus, but with an additional
+twist: the equations of a cartesian closed category impose an {\em equality
+relation} between proofs (or proof trees). For example:
+\[
+\begin{aligned}
+\inferrule{C \xto{f} A \quad C \xto{g} B}{
+\inferrule{C \xto{\la f,g \ra} A \sland B \quad A \sland B \xto{\pi} A}{C \xto{\pi\la f,g \ra} A }}
+\end{aligned} \qquad \hbox{\textrm{equals}} \quad C \xto{f} A.
+\]
+This notion of ``equivalence of proofs'' is essentially the same as that intro-
+duced by logicians (Prawitz, 1971), as pointed out by Mann (1975).
+
+There is still another connection of cartesian closed categories to logic.
+This is via the language of {\em typed $\l$-calculus}. Although older than category
+theory, $\l$-calculus may also be regarded as an equational theory of functions
+(or functional processes) in which composition is mirrored by substitution.
+As we shall see, some problems in cartesian closed categories are efficiently
+handled using typed $\l$-calculus.
