--- a/lambek-1984/lambek-1984-pal.tex
+++ b/lambek-1984/lambek-1984-pal.tex
@@ -5,7 +5,7 @@
 %\usepackage[full]{textcomp}
 %\usepackage[osf]{XCharter}% lining figures in math, osf in text
 %\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
 \usepackage{eulervm}
 
 \def\beginhook{}
