--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -170,8 +170,8 @@ bookmarksopenlevel=10,
 
 % makes "=" with "x" under it
 \makeatletter
-\DeclareRobustCommand{\eqx}{\mathrel{\mathpalette\eq@{x}}}
-\DeclareRobustCommand{\eqy}{\mathrel{\mathpalette\eq@{y}}}
+\DeclareRobustCommand{\eqx}{\mathrel{\mathpalette\eq@{X}}}
+\DeclareRobustCommand{\eqy}{\mathrel{\mathpalette\eq@{Y}}}
 \newcommand{\eq@}[2]{%
   \vtop{\offinterlineskip
     \ialign{\hfil##\hfil\cr
@@ -446,13 +446,27 @@ consists of types, terms and equations (between terms of the same type).
 \begin{enumerate}
 \item[(b1)] There are countably many variables of each type, say $x^{A}_{i} \in A$ if $i \in \nat$.
 \item[(b2)] $\star \in \one$.
-\item[(b3)] $\star \in \one$.
-\item[(b4)] $\star \in \one$.
-\item[(b5)] $\star \in \one$.
+\item[(b3)] If $a \in A$, $b \in B$ and $c \in A \times B$, then $\la a,b \ra \in A \times B$, $\prAB(c) \in A$ and $\prpAB(c) \in B$.
+\item[(b4)] If $f \in \fexpBA$ and $a \in A$ then $\evBA(f,a) \in B$.
+\item[(b5)] If $x$ is a variable of type $A$ and $\phi(x) \in B$ then $\l_{x \in A}{\varphi(x)} \in \fexpBA$.
 \end{enumerate}
+\noindent
+We often abbreviate $\evBA(f,a)$ as $f \app a$ when the type subscripts are clear
+from the context.
 
 \medskip
 \noindent
-(c) {\bf Equations}:
-
+(c) {\bf Equations}: All equations have the form $a \eqx a'$, where $a$ and $a'$ have
+the same type and $X$ is a set of variables containing all variables occurring
+freely in $a$ and $a'$.
+\begin{enumerate}
+\item[(c1)] $\eqx$ is reflexive, symmetric and transitive. Moreover, if $X \inc Y$ we have
+\[
+\inferrule{a \eqx b}{a \eqy b}
+\]
+(that is, from $a \eqx b$ we may infer $a \eqy b$).
+\item[(c2)] We have the substitution rules:
+\[
+\]
+\end{enumerate}
 \end{defn}
