--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -137,6 +137,7 @@ bookmarksopenlevel=10,
 \def\app{\mathop{{}^\wr}\kern-.8pt}
 \def\schon{Sch\"onfinkel}
 \def\nat{\mathbb N}
+\def\pf{\varphi}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
@@ -172,6 +173,7 @@ bookmarksopenlevel=10,
 \makeatletter
 \DeclareRobustCommand{\eqx}{\mathrel{\mathpalette\eq@{X}}}
 \DeclareRobustCommand{\eqy}{\mathrel{\mathpalette\eq@{Y}}}
+\DeclareRobustCommand{\eqxx}{\mathrel{\mathpalette\eq@{X \union x}}}
 \newcommand{\eq@}[2]{%
   \vtop{\offinterlineskip
     \ialign{\hfil##\hfil\cr
@@ -186,6 +188,7 @@ bookmarksopenlevel=10,
   \ifx#1\textstyle\scriptstyle\else
   \scriptscriptstyle\fi\fi
 }
+
 \makeatother
 
 % footnote tricks
@@ -467,6 +470,14 @@ freely in $a$ and $a'$.
 (that is, from $a \eqx b$ we may infer $a \eqy b$).
 \item[(c2)] We have the substitution rules:
 \[
+\inferrule{c \eqx c'}{\pf(c) \eqx \pf(c)}, \quad 
+\inferrule{a \eqx a', \quad b \eqx b'}{\psi(a,b), \eqx \psi(a',b')}
 \]
+if $\pf(z) \equiv \pi(z)$ or $\pi'(z)$ and $\psi(x,y) = \la x,y \ra$ or $x \app y$ and also
+\[
+\inferrule{\pf(x) \eqxx \psi(x)}{\l_{x\in A}\pf(x) \eqx \l_{x \in A}\psi(x)}
+\]
+if $x \notin X$.
+
 \end{enumerate}
 \end{defn}
