--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -104,7 +104,7 @@ bookmarksopenlevel=10,
 \def\lu{\lambda_u}
 \def\lv{\lambda_v}
 \def\lz{\lambda_z}
-\def\lxa{\l{x \in A}}
+\def\lxa{\l_{x \in A}}
 \def\subX{\ensuremath{_\text{X}}}
 \def\lm#1.#2{\lambda#1.\, #2}
 \def\br#1{[\, #1 \, ]}
