--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -539,6 +539,24 @@ Graph theorists would call the arrows ``oriented edges'' and the objects
 
 \begin{example}
 Given a graph $\cal G$ the $\l$-calculus $\L(\cal G)$ {\em generated} by $\cal G$
-is defined as follows.
+is defined as follows. Its types are generated inductively by the type forming
+operations $(-)\times(-)$ and $\fexp{(-)}{(-)}$ from the basic type $\one$
+and the vertices of $\cal G$ (which now count as basic types).
+Its terms are generated inductively
+from the basic terms $x_i^A$ and $\star$ by the term forming operations
+$\la -,-\ra$, $\pi(-)$, $\pi'(-)$, $\ev(-,-)$, and $\lxa(-)$,
+together with the new term forming operations:
+\[
+\inferrule{a \in A}{f a \in B}
+\]
+for each arrow $f: A \to B$ of $\cal G$. Finally, its equations are precisely those
+which follow from (c1) to (c3) and no others.
+
+In this example there are plenty of ``empty'' types; for instance, all the
+nodes of $\cal G$.
 \end{example}
+In the above example, as well as in the next section, we allow our
+languages to be proper classes in the sense of G\"odel-Bernays. If necessary,
+we work in a set theory with universes, in which ``classes'' are replaced by
+``sets in a sufficiently large universe''.
 
