--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -458,7 +458,11 @@ consists of types, terms and equations (between terms of the same type).
 \end{enumerate}
 \noindent
 We often abbreviate $\evBA(f,a)$ as $f \app a$ when the type subscripts are clear
-from the context.
+from the context.%
+\footnote{Editor's note: Lambek uses this squiggle $\app$ to denote a binary operation for
+function application. It appears here and in his later book about this same subject. I
+made a best guess about how to translate this into \LaTeX.}
+
 
 \def\lxa{\l_{x\in A}}
 
