--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -191,6 +191,16 @@ bookmarksopenlevel=10,
     }%
   }%
 }
+\DeclareRobustCommand{\eqdx}{\mathrel{\mathpalette\eqd@{X}}}
+\newcommand{\eqd@}[2]{%
+  \vtop{\offinterlineskip
+    \ialign{\hfil##\hfil\cr
+      $\m@th#1\doteq$\cr % top
+      \noalign{\sbox\z@{$\m@th#1\mkern0mu$}\kern-\wd\z@}
+      $\m@th\alexey@demote{#1}#2$\cr
+    }%
+  }%
+}
 \newcommand{\alexey@demote}[1]{%
   \ifx#1\displaystyle\scriptstyle\else
   \ifx#1\textstyle\scriptstyle\else
@@ -602,8 +612,22 @@ Our next aim is to obtain a pair of functors
 \end{tikzcd}
 \end{center}
 
-In particular, we wish to show that each cartesian closed category $\cal C$ has an
-``internal language'' $L(\cal C)$ which is a $\l$-calculus. But to describe this
+In particular, we wish to show that each cartesian closed category $\C$ has an
+``internal language'' $L(\C)$ which is a $\l$-calculus. But to describe this
 language, we first need to understand ``variables''.
 
+One can adjoin ``variables'' or ``indeterminates'' to cartesian closed
+categories much as one does to any universal algebra. Given a cartesian closed
+category $\C$ with objects $D$ and $A$, we adjoin an indeterminate arrow
+$x: D \to A$ to form the polynomial category $\C[x]$ as follows:
 
+Objects of $\C[x]$ are the same as objects of $\C$. Arrows of $\C[x]$ are
+generated from those in $\C$ and the new basic arrow $x: D \to A$ using the arrow
+forming operations: composition, $\la -,- \ra$, $(-)^*$. Equality $\eqdx$ in $\C[x]$ 
+is the smallest congruence relation on hom-sets of $\C[x]$ which respects equality $\doteq$
+$\C$ and assures that $\C[x]$ is a cartesian closed category.
+
+The category $\C[x]$ satisfies the appropriate universal property in $\cart$.
+For the committed categorist, $\C[x]$ may also be constructed directly as the
+Kleisli category of a certain co-monad (co-triple) on $\C$. For our purposes, the
+most interesting result concerns the normal forms of polynomials in $\C[x]$.
