--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -79,6 +79,7 @@ bookmarksopenlevel=10,
 \def\prp#1{\pi'_{#1}}
 \def\to{\longrightarrow}
 \def\xto#1{\xrightarrow{\kern.6em #1 \kern.6em}}
+\def\sxto#1{\xrightarrow{\kern.3em #1 \kern.3em}}
 \def\ent{\vdash}
 \def\imp{\shortrightarrow}
 \def\iff{\leftrightarrow}
@@ -631,3 +632,34 @@ The category $\C[x]$ satisfies the appropriate universal property in $\cart$.
 For the committed categorist, $\C[x]$ may also be constructed directly as the
 Kleisli category of a certain co-monad (co-triple) on $\C$. For our purposes, the
 most interesting result concerns the normal forms of polynomials in $\C[x]$.
+
+\begin{prop}
+({\em functional completeness} of cartesian closed categories).
+For every polynomial $\pf(x): B \to C$ in $\C[x]$ in an indeterminate arrow
+$x: D \to A$ there is a unique arrow $f: \fexp{A}{D} \times B \to C$ in $\C$
+such that
+\[
+f\la (x\pi'_{B,D})^*, \one_B\ra \eqdx \pf(x)
+\]
+\end{prop}
+
+An interesting alternative interpretation of this result is to think of
+$\C[x]$ as a deductive system with the indeterminat $x: D \to A$
+considered as a {\em new assumption}. Then functional completeness is
+simply a form of the deduction theorem in logic,
+with something extra added at the end: to every proof
+$\pf(x): B to C$ under the assumption $x: D \to A$ there is a unique
+proof $f: (D \impl A) \sland B \to C$  such that the proof
+\[
+\mprset{flushleft}
+\inferrule*
+{\inferrule*
+{\inferrule* 
+	{B \sland D \imp D \\ D \sxto{x} A}
+	{B \sland D \to A}
+}
+{\inferrule * {B \to (D \impl A) \\ B \to B} {B \to (D \impl A) \sland B}} \\ (D \impl A) \sland B \sxto{f} C}
+{B \to C}
+\]
+
+equals $B \sxto{\pf(x)} C$.
