--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -652,14 +652,14 @@ $\pf(x): B to C$ under the assumption $x: D \to A$ there is a unique
 proof $f: (D \impl A) \sland B \to C$  such that the proof
 \[
 \mprset{flushleft}
-\inferrule*
-{\inferrule*
-{\inferrule* 
-	{B \sland D \imp D \\ D \sxto{x} A}
-	{B \sland D \to A}
-}
-{\inferrule * {B \to (D \impl A) \\ B \to B} {B \to (D \impl A) \sland B}} \\ (D \impl A) \sland B \sxto{f} C}
-{B \to C}
+\inferrule
+	{\inferrule*
+    	{\inferrule*[leftskip=1.5em] 
+    		{B \sland D \imp D \\ D \sxto{x} A}
+    		{B \sland D \to A}}
+		{\inferrule {B \to (D \impl A) \\ B \to B} {B \to (D \impl A) \sland B}} \\ 
+		(D \impl A) \sland B \sxto{f} C}
+	{B \to C}
 \]
 
 equals $B \sxto{\pf(x)} C$.
