--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -671,7 +671,7 @@ equals $B \sxto{\pf(x)} C$.
 If we adjoin an indeterminate arrow $x: \one \to A$ to a
 cartesian closed category $\C$ and if $\pf(x) : \one \to B$ is a polynomial in $\C[x]$
 there exists a unique arrow $f: A \to B$ in $\C$ such that $fx \eqdx\pf(x)$.
-Equivalently, under the same hypothesis, there is a unique arrow $g: \one \to B$ such
+Equivalently, under the same hypothesis, there is a unique arrow $g: \one \to \fexpBA$ such
 that $g\app x \eqdx \pf(x)$.
 \end{cor}
 
