--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -682,3 +682,22 @@ It is not difficult to see that $\C[x,y]\iso \C[x][y]$
 and also $\C[x,y]\iso \C[z]$ where $z: \one \to A \times B$.
 
 We now introduce another example of a typed $\l$-calculus.
+
+\begin{example}
+The {\em internal language} $L(\C)$ of a cartesian closed
+category $\C$ is defined as follows.
+Its types are the objects of $\C$. Variables of type
+$A$ are indeterminate arrows $\one \to A$ over $\C$
+and terms of type $B$ with free
+variables $x_1, \dots, x_n$ are polynomials $\one \to B$ in
+$\C[x_1, \dots, x_n]$. It is not difficult to show that
+$L(\C)$ is a typed $\l$-calculus. In particular, for any term $\pf(x)$
+of type $B$, that is, an arrow $\pf(x): \one \to B$ in $\C[x]$,
+$\lxa \pf(x) \in \fexpBA$ is the unique arrow $g: \one \to \fexpBA$ such that
+$g \app x \eqdx \pf(x)$ according to Corollary 2.2.
+\end{example}
+
+The object function $L$ described in Example 2.3 may easily be extended
+to a functor $L: \cart \to \text{\lC}$. There is also a functor $C: \text{\lC} \to \cart$ in
+the opposite direction. Its action on objects will be described in the
+following example of a cartesian closed category.
