--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -93,7 +93,7 @@ bookmarksopenlevel=10,
 \def\ffam{\varphi}
 \def\comp{\circ}
 \def\bbone{\mathbb 1}
-\def\one{\mathbf 1}
+\def\one{1}
 \def\zeromap{0}
 \def\bbzero{{\mathbb O}}
 \def\ccc{{c.c.c.}}
@@ -102,6 +102,7 @@ bookmarksopenlevel=10,
 \def\evBA{\varepsilon_{B,A}}
 \def\L{\Lambda}
 \def\LC{{\mathcal L}}
+\def\MC{{\mathcal M}}
 \def\l{\lambda}
 \def\lamC{\l\text{-{\bf{\kern 0.2pt}calc}}}
 \def\lx{\lambda_x}
@@ -811,5 +812,10 @@ and that
 \]
 so functions, individuals and pairs are all on the same level. This allows,
 for example, functions to apply to themselves as arguments.
+
+Such a category is then completely determined by the monoid $\MC \equiv Hom(U,U)$.
+The equations specifying the cartesian closed structure when specialized to
+elements of $\MC$ reduce drastically: ignoring the terminal object, we simply
+erase all subscripts on the equations of a cartesian closed category.
 
 
