--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -437,9 +437,11 @@ twist: the equations of a cartesian closed category impose an {\em equality
 relation} between proofs (or proof trees). For example:
 \[
 \begin{aligned}
-\inferrule{C \xto{f} A \quad C \xto{g} B}{
-\inferrule{C \xto{\la f,g \ra} A \sland B \quad A \sland B \xto{\pi} A}{C \xto{\pi\la f,g \ra} A }}
-\end{aligned} \qquad \hbox{\textrm{equals}} \quad C \xto{f} A.
+\inferrule*
+	{\inferrule*{C \xto{f} A \quad C \xto{g} B}
+		{C \xto{\la f,g \ra} A \sland B} \\ A \sland B \xto{\pi} A}
+	{C \xto{\pi\la f,g \ra} A }
+\end{aligned} \quad \vbox to .5em{\hbox{\textrm{equals } $C \xto{f} A$}}
 \]
 This notion of ``equivalence of proofs'' is essentially the same as that intro-
 duced by logicians (Prawitz, 1971), as pointed out by Mann (1975).
