--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -815,7 +815,7 @@ and that
 so functions, individuals and pairs are all on the same level. This allows,
 for example, functions to apply to themselves as arguments.
 
-Such a category is then completely determined by the monoid $\MC \equiv Hom(U,U)$.
+Such a category is then completely determined by the monoid $\MC \equiv \Hom(U,U)$.
 The equations specifying the cartesian closed structure when specialized to
 elements of $\MC$ reduce drastically: ignoring the terminal object, we simply
 erase all subscripts on the equations of a cartesian closed category.
