--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -838,10 +838,83 @@ $\C$-monoids are the objects of a category, whose arrows are monoid homo-
 morphisms preserving the additional structure. We may apply the usual
 techniques of universal algebra to the variety of $\C$-monoids. For example, the
 {\em polynomial} $\C$-monoid $\MC[x]$ has as elements polynomials, that is, words in $x$
-modulo the smallest congruence relation satisfying Cl to CS. Evidently,
+modulo the smallest congruence relation satisfying Cl to C5. Evidently,
 $\MC[x]$ has the appropriate universal property.
 
 $\C$-monoids, like cartesian closed categories, satisfy a version of
 {\em functional completeness}.
+
+\begin{thm}
+If $\pf(x)$ is a polynomial in the indeterminate $x$ over a
+$\C$-monoid $\MC$, there exists a unique constant $f\in \MC$ such that
+\[
+f\la (x\pi')\ra^* = \pf(x)
+\]
+in $\MC[x]$.
+\end{thm}
+We may carry over various definitions from cartesian closed categories
+to $\C$-monoids. For example, we write
+\[
+g\app a \equiv \ev \la g(a \pi')^*,1\ra,
+\]
+\[
+\lx \pf(x) \equiv f^*,
+\]
+where $f$ is the constant from Theorem 4.2. It follows that
+\[
+\lx \pf(x) \app a = \pf(a).
+\]
+An amusing feature of the possibility of self-application is the
+following fixed point theorem for $\C$-monoids, which is also behind Russell's
+paradox.
+
+\begin{prop}
+For every polynomial $\pf(x)$ in $\MC[x]$ there exists an
+element $a \in \MC$ such that $\pf(a) = a$.
+\end{prop}
+
+\begin{proof}
+Put $b = \lx \pf(x \app x)$ and let $a \equiv b \app b$.
+\end{proof}
+
+To make the connection between $\C$-monoids and cartesian closed categories
+precise, we recall the following.
+
+\begin{defn}
+The {\em Karoubi envelope} (or {\em idempotent splitting envelope})
+$K(\mathcal A)$ of a category $\mathcal A$ is a category whose objects
+are the idempotent arrows of $\mathcal A$ and whose arrows $f \to g$, where
+$f^2 = f: A \to A$ and $g^2 = g: B \to B$, are triplets
+$(f, \pf, g)$ such that $g\pf f = \pf$.
+\end{defn}
+
+The following is due to Dana Scott (1980).
+
+\begin{thm}
+Let $\MC$ be a C-monoid.
+\begin{enumerate}[label=(\roman*)]
+\item $K(\MC)$ is a cartesian closed category  with terminal object
+$T \equiv (\pi')^*$.
+\item If $\mathcal A$ is any cartesian closed category with an object $U$
+such that $\fexp{U}{U} \iso U \iso U \times U$, then $\text{End}_{\mathcal A}(U)$
+is a $\C$-monoid. In particular if ${\mathcal A} = K(\MC)$
+and $U$ is the object of $\MC$
+regarded as a one-object category, then $\text{End}_{\mathcal A} \iso \MC$.
+\end{enumerate}
+\end{thm}
+
+We remark that, if $K_0(\MC)$ is the full subcategory of $K(\MC)$ consisting
+of all objects isomorphic to $T$ or $U$, then $K_0(\MC)$ is a cartesian closed
+category with (at most) two non-isomorphic objects.
+
+Examples of $\C$-monoids or, equivalently, of cartesian closed categories
+with an object $U$ such that $\fexp{U}{U} \iso U \iso U \times U$
+have been constructed by Dana Scott (1972), using the category of continuous
+lattices, to mention only one such example.
+
+$\C$-monoids are also closely related to an extended version of the usual
+untyped $\l$-calculus.
+
+
 
 
