--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -915,6 +915,41 @@ lattices, to mention only one such example.
 $\C$-monoids are also closely related to an extended version of the usual
 untyped $\l$-calculus.
 
+\begin{defn}
+An (untyped) $\l$-calculus is a formal language consisting
+of terms and equations as follows. Among the terms there are countably many
+variables. Moreover, if $a$, $b$ and $c$ are terms, then so are
+$\pi(c)$, $\pi'(c)$, $(a,b)$, and $b \app a$.
+Finally, if $\pf(x)$ is a term, possibly with a free occurrence
+of the variable $x$, then $\lx\pf(x)$ is also a term (in which all occurrences of
+$x$ are bound). Equality is an equivalence relation between terms which
+satisfies the usual rules allowing substitution of equals for equals, including
+the rule
+\[
+\inferrule{\pf(x) = \psi(x)}{\lx \pf(x) = \lx \psi(x)},
+\]
+which furthermore satisfies the substitution rule
+\[
+\inferrule{\pf(x) = \psi(x)}{ \pf(a) = \psi(a)},
+\]
+where it is assumed that a is substitutable for x, and which finally
+satisfies the following equations:
+\begin{enumerate}[label=L\theenumi.]
+\item $\lx \pf(x)\app x = \pf(x)$.
+\item $\lx (f \app x) = f$, if $x$ is not free in $f$.
+\item $\pi((a,b)) = a$.
+\item $\pi'((a,b)) = b$.
+\item $(\pi(c), \pi' (c)) = c$.
+\end{enumerate}
+\end{defn}
 
+The usual untyped $\l$-calculus omits the term forming operations $\pi(-)$,
+$\pi'(-)$, and $(-,-)$, together with the equations L3, L4 and L5. Unfortunately,
+the presence of L5 (``surjective pairing'') adds an unexpected complication:
+the Church-Rosser theorem then fails (Barendregt, 1981, Exercise 15.4.4).
+
+The (untyped) $\l$-calculi are the objects of a category whose arrows are
+translations. A translation is a mapping from terms to terms which sends
+variables to variables and preserves the term forming operations.
 
 
