--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -949,7 +949,16 @@ the presence of L5 (``surjective pairing'') adds an unexpected complication:
 the Church-Rosser theorem then fails (Barendregt, 1981, Exercise 15.4.4).
 
 The (untyped) $\l$-calculi are the objects of a category whose arrows are
-translations. A translation is a mapping from terms to terms which sends
+translations. A {\em translation} is a mapping from terms to terms which sends
 variables to variables and preserves the term forming operations.
 
+\begin{thm}
+The category of $\C$-monoids is isomorphic to the category of
+(untyped) $\l$-calculi.
+\end{thm}
 
+\begin{proof}
+(Sketch). Starting with a $\C$-monoid $\MC$, we form the $\l$-calculus
+$L(\MC)$ whose terms in the variables $x_1, ... , x_n$ are elements of $\MC[x_1,...,x_n]$
+with term forming operations defined as follows:
+\end{proof}
