--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -961,4 +961,35 @@ The category of $\C$-monoids is isomorphic to the category of
 (Sketch). Starting with a $\C$-monoid $\MC$, we form the $\l$-calculus
 $L(\MC)$ whose terms in the variables $x_1, ... , x_n$ are elements of $\MC[x_1,...,x_n]$
 with term forming operations defined as follows:
+\begin{align*}
+\pi(c) & \equiv \pi \app c,\\
+\pi' (c) & \equiv \pi' \app c,\\
+(a,b) & \equiv \la \lx a, \lx b\ra \app 1,\\
+f \app a & \equiv \ev \la f(a \pi')^*,1 \ra,\\
+\lx \pf(x) & \,\, \text{by functional completeness.%
+\footnotemark}
+\end{align*}
+\footnotetext{This is clearly missing a right hand side. Oh well}
+
+Conversely, starting with a $\l$-calculus $\LC$, we form the $\C$-monoid $M(\LC)$
+whose elements are the closed terms of $\LC$ with operations defined as follows:
+\begin{align*}
+1 &\equiv \lx x,\\
+gf &\equiv \lx (g\app (f\app x)),\\
+\pi & \equiv \lx \pi(x),\\
+\pi' & \equiv \lx \pi'(x),\\
+\la f,g \ra &\equiv \lx (f\app x, g \app x),\\
+\ev & \equiv \l_z (\pi(z) \app \pi'(z)),\\
+h^* & \equiv \lx\ly(h \app (x,y)).
+\end{align*}
+It is easily checked that
+\[
+ML(\MC) = \MC, \,\, LM(\LC) = \LC.
+\]
+It can also be shown that $M$ and $L$ extend to functors inverse to one
+another.
 \end{proof}
+
+\section{Toposes and intuitionistic type theory}
+
+
