--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -212,8 +212,8 @@ bookmarksopenlevel=10,
 \makeatother
 
 % footnote tricks
-\usepackage[symbol]{footmisc}
-\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\usepackage{footmisc}
+%\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \makeatletter
 \let\original@footnotemark\footnotemark
@@ -848,7 +848,7 @@ $\C$-monoids, like cartesian closed categories, satisfy a version of
 If $\pf(x)$ is a polynomial in the indeterminate $x$ over a
 $\C$-monoid $\MC$, there exists a unique constant $f\in \MC$ such that
 \[
-f\la (x\pi')\ra^* = \pf(x)
+f\la (x\pi')^*, 1 \ra = \pf(x)
 \]
 in $\MC[x]$.
 \end{thm}
@@ -860,7 +860,9 @@ g\app a \equiv \ev \la g(a \pi')^*,1\ra,
 \[
 \lx \pf(x) \equiv f^*,
 \]
-where $f$ is the constant from Theorem 4.2. It follows that
+where $f$ is the constant from Theorem 3.2.%
+\footnote{In the paper this is mis-labeled as 4.2 because they didn't have \LaTeX}
+It follows that
 \[
 \lx \pf(x) \app a = \pf(a).
 \]
@@ -966,10 +968,10 @@ with term forming operations defined as follows:
 \pi' (c) & \equiv \pi' \app c,\\
 (a,b) & \equiv \la \lx a, \lx b\ra \app 1,\\
 f \app a & \equiv \ev \la f(a \pi')^*,1 \ra,\\
-\lx \pf(x) & \,\, \text{by functional completeness.%
+\lx \pf(x) &\equiv f^* \,\, \text{by functional completeness.%
 \footnotemark}
 \end{align*}
-\footnotetext{This is clearly missing a right hand side. Oh well}
+\footnotetext{This is a guess based on the discussion after Theorem 3.2}
 
 Conversely, starting with a $\l$-calculus $\LC$, we form the $\C$-monoid $M(\LC)$
 whose elements are the closed terms of $\LC$ with operations defined as follows:
