--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -602,7 +602,7 @@ $\lamC$ is the category whose objects are $\l$-calculi and whose arrows are
 \item $\trans$ sends types of $\LC$ to types of $\LC'$.
 \item $\trans$ sends terms of $\LC$, say of type $A$, to terms of $\LC'$ of type
 $\trans(A)$, in particular, variables to variables.
-\item $\trans$ preserves everything on the nose, for example: $\trans(\one) = \one$, $\trans(A \times B) = \trans(A) \times \trans(B)$, $trans(\star) = \star$, $\trans(\la a,b \ra) = \la \trans(a), \trans(b) \ra$, and so on.
+\item $\trans$ preserves everything on the nose, for example: $\trans(\one) = \one$, $\trans(A \times B) = \trans(A) \times \trans(B)$, $\trans(\star) = \star$, $\trans(\la a,b \ra) = \la \trans(a), \trans(b) \ra$, and so on.
 \item $\trans$ preserves equality: if $a \eqx b$ then $\trans(a) \eqtx \trans(b)$
 
 \end{enumerate}
@@ -821,7 +821,7 @@ elements of $\MC$ reduce drastically: ignoring the terminal object, we simply
 erase all subscripts on the equations of a cartesian closed category.
 
 \begin{defn}
-A {\em $C$-monoid} $\MC$ is s a monoid with extra structure
+A {\em $C$-monoid} $\MC$ is a monoid with extra structure
 $(\pi, \pi', \ev, (-)^*, \la -,- \ra)$ where $\pi$, $\pi'$, and $\ev$ are
 elements of $\MC$ (i.e. nullary operations), $(-)^*$ a unary and $\la -,- \ra$ is
 a binary operation satisfying the following identities:
