note about phi(x)

--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -537,7 +537,7 @@ is the internal language of certain categories (see Section 2).
 
 \begin{prop}
 If $\pf(x) \eqx \psi(x)$ with $x$ of type $A$ and if $a$ is a
-term of type $A$ such that $X$ contain sall free variables occurring 
+term of type $A$ such that $X$ contains all free variables occurring 
 in $a$ (but not $x$), then $\pf(a) \eqx \psi(x)$. In particular if $f$
 and $g$ do not contain $x$, $f \eqxx g$ provided there is at least one term of type
 $A$ with free variables in $X$.
@@ -559,7 +559,7 @@ two mappings between them:
 
 Graph theorists would call the arrows ``oriented edges'' and the objects
 ``vertices'' or ``nodes''. We write $f: A \to B$ for ``$\mathop\text{source}(f) = A$'' and
-``$\mathop{\text{target(f)}} = B$''.
+``$\mathop{\text{target}(f)} = B$''.
 
 \begin{example}
 Given a graph $\cal G$ the $\l$-calculus $\L(\cal G)$ {\em generated} by $\cal G$
@@ -639,7 +639,14 @@ most interesting result concerns the normal forms of polynomials in $\C[x]$.
 
 \begin{prop}
 ({\em functional completeness} of cartesian closed categories).
-For every polynomial $\pf(x): B \to C$ in $\C[x]$ in an indeterminate arrow
+For every polynomial $\pf(x): B \to C$%
+\footnote{Editor's note: This notation $\pf(x)$ is endlessly confusion to me.
+You want to think that $\pf$ maps $x \in B$ to something in $C$ 
+but that's not that is going on.
+What's going on is that the object $\pf(x)$ labeled by $x$ is something that maps
+things in $B$ to things in $C$. At least that's the only way the notation
+makes sense to me.}
+in $\C[x]$ in an indeterminate arrow
 $x: D \to A$ there is a unique arrow $f: \fexp{A}{D} \times B \to C$ in $\C$
 such that
 \[
