note about phi(x)

--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -640,17 +640,18 @@ most interesting result concerns the normal forms of polynomials in $\C[x]$.
 \begin{prop}
 ({\em functional completeness} of cartesian closed categories).
 For every polynomial $\pf(x): B \to C$%
-\footnote{Editor's note: This notation $\pf(x)$ is endlessly confusion to me.
-You want to think that $\pf$ maps $x \in B$ to something in $C$ 
-but that's not that is going on.
-What's going on is that the object $\pf(x)$ labeled by $x$ is something that maps
-things in $B$ to things in $C$. At least that's the only way the notation
-makes sense to me.}
 in $\C[x]$ in an indeterminate arrow
 $x: D \to A$ there is a unique arrow $f: \fexp{A}{D} \times B \to C$ in $\C$
 such that
 \[
 f\la (x\pi'_{B,D})^*, \one_B\ra \eqdx \pf(x)
+\footnote{Editor's note: This notation $\pf(x)$ is endlessly confusing to me.
+You want to think that $\pf$ maps $x \in B$ to something in $C$ 
+but that's not that is going on. What's going on is that the object
+$\pf(x)$ labeled by $x$ is something that maps
+things in $B$ to things in $C$. So really $\pf$ maps an arrow from
+$D$ to $A$ to an arrow from $B$ to $C$? That's the only way the notation
+makes sense to me.}
 \]
 \end{prop}
 
