--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -86,8 +86,12 @@ bookmarksopenlevel=10,
 \def\fexp#1#2{#1^{#2}}
 \def\fexpBA{\fexp{B}{A}}
 \def\inc{\subseteq}
+\def\Sub{\mathop{\rm sub}}
 \def\dom{\mathop{\rm dom}}
 \def\cod{\mathop{\rm cod}}
+\def\ker{\mathop{\rm ker}}
+\def\Ker{\mathop{\rm Ker}}
+\def\cha{\mathop{\rm char}}
 \def\id{{\mathrm 1}}
 \def\res{\!\upharpoonleft\!}
 \def\ffam{\varphi}
@@ -101,6 +105,7 @@ bookmarksopenlevel=10,
 \def\ebc{\varepsilon_{BC}}
 \def\evBA{\varepsilon_{B,A}}
 \def\L{\Lambda}
+\def\OM{\Omega}
 \def\LC{{\mathcal L}}
 \def\MC{{\mathcal M}}
 \def\l{\lambda}
@@ -1002,4 +1007,31 @@ another.
 
 \section{Toposes and intuitionistic type theory}
 
+One of the most important concepts in category theory is that of a topos.
+For our purposes, it will be convenient to insist that a topos contains a
+natural numbers object in the sense of Lawvere.
 
+\begin{defn}
+A {\em topos} is a cartesian closed category with a subobject
+classifier and a natural numbers object.
+
+A subobject classifier is an object $\OM$ together with a natural
+isomorphism $\Sub \cong \Hom(-, \OM)$ where $\Sub$ is the 
+contravariant functor which
+assigns to each object $A$ the set of its subobjects. There are several ways
+of making this more precise; we prefer the following: there is given an arrow
+$\tau: 1 \to \OM$ such that
+\begin{enumerate}
+\item[(i)] For every arrow h: $A \to \OM$ an equalizer of $h$ and $\tau\, 0_A: A \to 1 \to \OM$
+exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of h),
+\item[(ii)] For every monomorphism $m: B \to A$ there is a unique characteristic
+morphism $\cha m: A \to \OM$ such that
+\[
+\cha(\ker h) \doteq h, \quad ker(\cha m) \cong m.
+\]
+\end{enumerate}
+\end{defn}
+Examples of toposes are the category $\Set$ (with $\OM \equiv \{\bot, \top\}$),
+functor categories $\fexp{\Set}{\C}$ (including $\MC$-sets when $\C$ is 
+a monoid $\MC$, the category of sheaves on a topological space and, 
+more generally, any Grothendieck topos (Johnstone, 1977).
