--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1035,3 +1035,30 @@ Examples of toposes are the category $\Set$ (with $\OM \equiv \{\bot, \top\}$),
 functor categories $\fexp{\Set}{\C}$ (including $\MC$-sets when $\C$ is 
 a monoid $\MC$, the category of sheaves on a topological space and, 
 more generally, any Grothendieck topos (Johnstone, 1977).
+
+One simplification in Definition 4.1, first observed by Mikkelsen, is of
+importance to us. Instead of requiring arbitrary exponents $\fexpBA$  one need only
+require $PA \cong \fexp{\OM}{A}$ and its associated structure.
+More precisely, we postulate a power ~ structure $(P,\ev,\star)$: 
+for each object A there is an object PA, an arrow $\ev_A : PA \times A\to \OM$
+and an arrow forming operation
+\[
+\inferrule{h: B \times A \to \OM}{h^*: B \to PA}
+\]
+such that (subscripts being omitted)
+\[
+\ev\la h^* \pi,\pi'\ra \doteq h, (\ev\la k \pi,\pi'\ra)^* \doteq k 
+\]
+for all $h: B\times A \to \OM$ and $k: B \to PA$.
+
+While in the category $\Set$ the subsets of a given set form a Boolean
+algebra, in an arbitrary topos the subobjects of a given object $A$ form a
+Heyting algebra; hence so does the set $Hom(A,\OM)$. This permits an 
+interpretation of intuitionistic propositional logic in any topos, which can be
+extended to higher order intuitionistic logic, which may be regarded as a
+variant of set theory.
+
+
+
+
+
