--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -32,7 +32,8 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
 }
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
