--- a/helpers/fixarxiv-palatino-newpx.tex
+++ b/helpers/fixarxiv-palatino-newpx.tex
@@ -33,8 +33,10 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
 }
+
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
