--- a/helpers/fixarxiv-cmr.tex
+++ b/helpers/fixarxiv-cmr.tex
@@ -14,7 +14,6 @@
 \usepackage{microtype}
 
 \usepackage[colorlinks=true
-,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -25,7 +24,8 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
 }
 
 %\usepackage[dotinlabels]{titletoc}
