--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -19,7 +19,6 @@
 
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
-,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -30,7 +29,8 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
 }
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
