--- a/lambek-1984/lambek-1984-pal.tex
+++ b/lambek-1984/lambek-1984-pal.tex
@@ -7,6 +7,8 @@
 %\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[cal=cm,scr=esstix]{mathalpha}
 \usepackage{eulervm}
+\usepackage[leqno]{amsmath}
+\usepackage{amssymb}
 
 \def\beginhook{}
 
