--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -11,7 +11,6 @@
 \linespread{1.05}
 \sloppy
 \raggedbottom
-\usepackage[leqno]{amsmath}
 
 \pagestyle{plain}
 \usepackage{mathpartir}
@@ -19,7 +18,6 @@
 \usepackage{mathtools}
 \usepackage{tikz-cd}
 \usepackage{microtype}
-\usepackage{amssymb}
 \usepackage{enumitem}
 \usepackage{nccmath}
 \usetikzlibrary {arrows.meta,bending,positioning}
@@ -383,8 +381,8 @@ arrows and equations:
 \item[(ii)] The following rules generate new arrows from old:
 
 \[
-\inferrule {f: A \to B \quad g: B \to C}{gf: A \to C},\quad
-\inferrule {f: C \to A \quad\! g: C \to B}{\la f, g \ra: C \to A \times B}, \quad
+\inferrule {f: A \to B \quad g: B \to C}{gf: A \to C},\,\,
+\inferrule {f: C \to A \quad\! g: C \to B}{\la f, g \ra: C \to A \times B}, \,\,
 \inferrule {f: C \times A \to B}{f^*: C \to \fexpBA}
 \]
 
